# cflpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/cfl_file/: example.cfl
scripts/: generate_and_print_strings.py  generate_dataset.py  grammer.py  to_chomsky.py
src/cflpy/: __init__.py  __main__.py  grammar.py  parser.py
src/cflpy/core/: __init__.py  types.py
src/cflpy/to_chomsly_normal_form/: __init__.py  main.py  step1_start_symbol.py  step2_remove_epsilon.py  step3_remove_unit.py  step4_decompose_long_productions.py  step5_remove_terminal_in_2_term_rule.py
tests/: test_grammer.py  test_parser.py
tests/test_chomsky_normal_form/: test_step1.py  test_step3.py
tests/test_chomsky_normal_form/test_step2/: test_find_null_definite.py  test_find_nullable.py
tests/test_to_chomsky_normal_form/: test_step3.py  test_step4.py  test_step5.py
tests/test_to_chomsky_normal_form/test_step2/: test_remove_epsilon.py
